I guess I did a bunch of stuff. I tried to do a bunch of stuff, that is. I mean. I got it sorta-working. I tried to make it actually do some cool stuff, right. I was going to set up a page for each stock with additional information, but, if I'm honest, there's not much additional information that I Have right now. I've revealed glaring architectural flaws in how I collect and distribute my data. And that's fine. That's cool. It's fun, even, and I'm glad to have learned such huge lessons on how to go forward. But continuing to dick around with front-end work right now? I don't think that's in the cards. What I really ought to be doing is going back to the back-end, and figuring out how to collect every single post for every single day for every single month of every single year. Then I'm going to analyze them. Then I'm going to get the real data. Then I might have something really cool going on. But right now? Ok. I've made the Stonk Ticker. It doesn't tick, because I fail to see the point in configuring that when I'm going to have to re-do the whole damned thing when I shift the architecture. That's fine. ITS FINE. ANd, hell, I got further in React. There's still stupid bugs like every other programming venture, but I got it far enough that it doesn't really matter. What does matter is the data. The data is going to tell a story. There's something important in the data I've been collecting, and, the beauty of it is, that someone else has already been collecting it for me. So I'm gonna see them about it, and get them to give it to me, and then I'm gonna dig through it. I'm gonna play with it like a child in a sandbox, except this isnt' just any sandbox. This is a meticulous sandbox, where no cat comes to shit. My sandbox.

--- a/src/App.scss
+++ b/src/App.scss
@@ -80,6 +80,9 @@ nav#stonkk-nav {
   width: 320px;
   //background-color: rgba(0,0,0,0.04);
   border-right: 1px solid black;
+  text-decoration: none;
+  a { color: black; }
+  a:hover { text-decoration: none; }
 }
 
 .stonkSummary {
